# ggwget

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
examples/: ggwget_cli.cpp
include/ggwget/: Downloader.hpp
src/: Downloader.cpp
